--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -30,11 +30,15 @@
 
 <main class="grid place-items-center gap-4 p-8">
     <form class="w-full max-w-md" method="post" th:object="${task}">
+        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+
         <fieldset class="fieldset">
             <legend class="fieldset-legend" th:text="#{title}"></legend>
             <input th:field="*{title}" th:errorclass="input-error" type="text" class="input"/>
             <p class="label text-error" th:errors="*{title}"></p>
+        </fieldset>
 
+        <fieldset class="fieldset">
             <legend class="fieldset-legend" th:text="#{description}"></legend>
             <textarea th:field="*{description}" th:errorclass="textarea-error" class="textarea"></textarea>
             <p class="label text-error" th:errors="*{description}"></p>
